--- a/editor/src/MainWindow.ui
+++ b/editor/src/MainWindow.ui
@@ -23,7 +23,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
+  <widget class="QMenuBar" name="mbMain">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -53,7 +53,14 @@
     </property>
     <addaction name="actionAbout"/>
    </widget>
+   <widget class="QMenu" name="menu_View">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+    <addaction name="actionFullScreen"/>
+   </widget>
    <addaction name="menu_File"/>
+   <addaction name="menu_View"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="sbMain"/>
@@ -139,6 +146,11 @@
    </property>
    <property name="text">
     <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="actionFullScreen">
+   <property name="text">
+    <string>&amp;Full Screen</string>
    </property>
   </action>
  </widget>
